--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "flickity": "^2.3.0",
+    "next": "^13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.6",
     "react-icons": "^4.9.0",
+    "react-slick": "^0.29.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
