--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
+    "eslint-config-next": "^13.4.7",
     "flickity": "^2.3.0",
-    "next": "^13.4.6",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-flickity-component": "^4.0.6",
     "react-icons": "^4.9.0",
     "react-slick": "^0.29.0",
